[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trusty"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.13"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "The President and Fellows of Harvard College", email = "info@neuroinfo.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydicom",
  "pynetdicom",
  "tabulate"
]

[project.urls]
Documentation = "https://github.com/The President and Fellows of Harvard College/trusty#readme"
Issues = "https://github.com/The President and Fellows of Harvard College/trusty/issues"
Source = "https://github.com/The President and Fellows of Harvard College/trusty"

[project.scripts]
trusty = "trusty.cli:trusty"

[tool.hatch.version]
path = "src/trusty/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/trusty tests}"

[tool.coverage.run]
source_pkgs = ["trusty", "tests"]
branch = true
parallel = true
omit = [
  "src/trusty/__about__.py",
]

[tool.coverage.paths]
trusty = ["src/trusty", "*/trusty/src/trusty"]
tests = ["tests", "*/trusty/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
